--- a/index.html
+++ b/index.html
@@ -16,12 +16,22 @@
             <div class="comp-name">Company</div>
           </div>
         </header>
-        <div class="company-name"></div>
+        <div class="company-name">
+          <h2 style="color:yellow">COMPANY</h2>
+          Maintenance Tracker
+        </div>
+        <p class="app-write-up">
+          Maintenance Tracker App is an application that provides users with the
+          ability to reach out to operations or repairs department regarding
+          repair or maintenance requests and monitor the status of the request.
+        </p>
       </div>
       <div class="welcome-section">
-        <div class="welcome">Welcome to Company</div>
-        <form action="#">
+        <h1 class="welcome">Welcome to Company</h1>
+        <form action="#" class="form">
+          <label>Username</label>
           <input type="text" name="username" />
+          <label>Password</label>
           <input type="password" name="password" />
           <input type="button" value="Create account" />
           <input type="submit" value="Login" />
