--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           repair or maintenance requests and monitor the status of the request.
         </p>
       </div>
-      <div class="welcome-section">
+      <div id="welcome-section">
         <h1 class="welcome">
           Welcome to <span style="color:#f46f04">Company</span>
         </h1>
@@ -56,9 +56,36 @@
           </div>
         </form>
       </div>
+      <div id="create-account-section">
+          <h1 class="welcome">
+            Welcome to <span style="color:#f46f04">Company</span>
+          </h1>
+          <form action="#" class="form" autocomplete="autocomplete">
+            <label id="username-label">Username</label>
+            <input
+              type="text"
+              name="username"
+              id="username"
+              placeholder="Username"
+            />
+            <label id="password-label">Password</label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Password"
+            />
+            <div class="actions">
+              <input type="button" value="CREATE ACCOUNT" id="create-account" />
+              <input type="submit" value="LOGIN" />
+            </div>
+          </form>
+        </div>
       <div class="aside">
-        <div class="ball"></div>
-        <div class="square"></div>
+        <div class="ball1"></div>
+        <div class="ball2"></div>
+        <div class="square1"></div>
+        <div class="square2"></div>
         <div class="triangle"></div>
       </div>
     </main>
