dashboard design completed

--- a/create-account.html
+++ b/create-account.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Maintenance Tracker App</title>
+    <title>User Page</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins|Quicksand&display=swap"
       rel="stylesheet"
     />
-    
   </head>
   <body>
     <main>
@@ -33,8 +32,8 @@
         </p>
       </div>
       <div id="welcome-section">
-        <h1 class="welcome">
-          Welcome to <span style="color:#f46f04">Company</span>
+        <h1 class="create-page">
+          Create <span style="color:#f46f04">Account</span>
         </h1>
         <form action="#" class="form" autocomplete="autocomplete">
           <label id="username-label">Username</label>
@@ -51,14 +50,23 @@
             id="password"
             placeholder="Password"
           />
+          <label id="password-label">Email</label>
+          <input type="text" name="email" id="email" placeholder="Email" />
+          <label id="password-label">Phone Number</label>
+          <input
+            type="text"
+            name="phone-number"
+            id="phone-number"
+            placeholder="Phone Number"
+          />
           <div class="actions">
             <input
               type="button"
-              onclick="window.location.href='create-account.html'"
+              onclick="window.location.href='user-page.html'"
               value="CREATE ACCOUNT"
               id="create-account"
             />
-            <input type="submit" value="LOGIN" id="login" />
+            <input type="submit" value="LOGIN" />
           </div>
         </form>
       </div>
