--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
       <div class="user-profile">
         <div class="user-id">
           <div class="ball"></div>
-          <h2>User</h2>
+          <h2>Jane</h2>
         </div>
 
         <div class="tasks">
@@ -32,25 +32,25 @@
           </ul>
         </div>
       </div>
-      <div id="requests">
+      <div class="requests">
         <table class="requests-table">
           <tr>
             <th>S/N</th>
             <th>User</th>
             <th>Request</th>
-            <th>Actions</th>
+            <th>Date</th>
             <th>Status</th>
           </tr>
           <tr>
             <td>1</td>
-            <td>John</td>
+            <td>Jane</td>
             <td>Fix Table</td>
             <td></td>
             <td>Pending</td>
           </tr>
           <tr>
             <td>2</td>
-            <td>Kelvin</td>
+            <td>Jane</td>
             <td>Lights not switching on</td>
             <td></td>
             <td>Pending</td>
