added logn.js file to fix some js issues

--- a/index.html
+++ b/index.html
@@ -71,5 +71,6 @@
       </div>
     </main>
     <script src="./src/main.js"></script>
+    <script src="./src/login.js"></script>
   </body>
 </html>
