--- a/dashboard.html
+++ b/dashboard.html
@@ -25,10 +25,10 @@
 
         <div class="tasks">
           <ul>
-            <li><i class="fas fa-user"></i>Profile</li>
-            <li><i class="fas fa-tasks"></i>Tasks</li>
-            <li>Make Request</li>
-            <li>View All Requests</li>
+            <li><i class="fas fa-user"></i> Profile</li>
+            <li><i class="fas fa-tasks"></i> Tasks</li>
+            <li><i class="fas fa-user-cog"></i>Make Request</li>
+            <li><i class="fas fa-bars"></i> View All Requests</li>
           </ul>
         </div>
       </div>
