improved ui design

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             id="password"
             placeholder="Password"
           />
+          <div id="pass-error"></div>
           <div class="actions">
             <input
               type="button"
