--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div id="welcome-section">
         <h1 class="welcome">
-          Welcome to <span style="color:#f46f04">Company</span>
+          Welcome to <span style="color:#F88F3B">Company</span>
         </h1>
         <form action="#" class="form" autocomplete="autocomplete">
           <label id="username-label">Username</label>
