--- a/create-account.html
+++ b/create-account.html
@@ -54,7 +54,7 @@
           />
           <label id="phone-label">Phone Number</label>
           <input
-            type="text"
+            type="number"
             name="phone-number"
             id="phone-number"
             placeholder="Phone Number"
