--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -19,7 +19,7 @@
     <main class="users">
       <div class="user-profile">
         <div class="user-id">
-          <div class="ball"></div>
+          <i style="color:#ee7009" class="fa fa-user-circle fa-4x" aria-hidden="true"></i>
           <h2>Jane</h2>
         </div>
 
