--- a/public/make-request.html
+++ b/public/make-request.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>User | Dashboard</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins|Quicksand&display=swap"
       rel="stylesheet"
@@ -19,7 +19,7 @@
     <main class="users">
       <div class="user-profile">
         <div class="user-id">
-          <i class="fa fa-user-circle fa-4x" aria-hidden="true"></i>
+            <i style="color:#ee7009" class="fa fa-user-circle fa-4x" aria-hidden="true"></i>
           <h2>Jane</h2>
         </div>
 
