added password hashing and salting

--- a/ui/create-account.html
+++ b/ui/create-account.html
@@ -79,6 +79,6 @@
         <div class="triangle"></div>
       </div>
     </main>
-    <script src="./src/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
