--- a/ui/make-request.html
+++ b/ui/make-request.html
@@ -61,7 +61,7 @@
         </form>
       </div>
     </main>
-    <script src="./src/main.js"></script>
-    <script src="./src/login.js"></script>
+    <script src="./main.js"></script>
+    <script src="./login.js"></script>
   </body>
 </html>
