--- a/ui/index.html
+++ b/ui/index.html
@@ -71,7 +71,7 @@
         <div class="triangle"></div>
       </div>
     </main>
-    <script src="./src/main.js"></script>
-    <script src="./src/login.js"></script>
+    <script src="./main.js"></script>
+    <script src="./login.js"></script>
   </body>
 </html>
